packages/force_update/backend/dev/k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exampleapp-api
  namespace: exampleapp-dev
  labels:
    app: exampleapp-api
spec:
  selector:
    matchLabels:
      app: exampleapp-api
  replicas: 1
  template:
    metadata:
      labels:
        app: exampleapp-api
    spec:
      containers:
      - name: api
        image: exampleapp-api
        ports:
        - containerPort: 8080
        - containerPort: 22
        resources:
          requests:
            cpu: '1'
            memory: '200Mi'
          limits:
            cpu: '4'
            memory: '5Gi'
---
apiVersion: v1
kind: Service
metadata:
  name: exampleapp-api-svc
  namespace: exampleapp-dev
  labels:
    app: exampleapp-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: exampleapp-api
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: exampleapp-path-strip
  namespace: exampleapp-dev
spec:
  stripPrefix:
    prefixes:
    - /api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exampleapp-api-ingress
  namespace: exampleapp-dev
spec:
  rules:
  - host: exampleapp.local.lncd.pl
    http:
      paths:
      - path: /api
        backend:
          service:
            name: exampleapp-api-svc
            port:
              number: 80
        pathType: ImplementationSpecific
